{
  "version": 4,
  "terraform_version": "1.0.6",
  "serial": 44,
  "lineage": "957a2318-a945-7ae2-f8e4-53157ce03d79",
  "resources": [
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "subnet_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:124356934321:subnet/subnet-0f36b5c8a87495218",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "available_ip_address_count": 251,
            "cidr_block": "10.0.102.0/24",
            "default_for_az": false,
            "id": "subnet-0f36b5c8a87495218",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "124356934321",
            "state": "available",
            "tags": {
              "Name": "my-vpc-public-us-east-1c"
            },
            "vpc_id": "vpc-09e4be7cb2d0c4ff7"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow-jenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:124356934321:security-group/sg-0c6ec8c567114590c",
            "description": "allow ssh and http port",
            "egress": [],
            "id": "sg-0c6ec8c567114590c",
            "ingress": [],
            "name": "jenkins-sg-app",
            "name_prefix": "",
            "owner_id": "124356934321",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "jenkins-sg-app",
              "customer": "cliente1",
              "env": "prod",
              "project": "slack"
            },
            "tags_all": {
              "Name": "jenkins-sg-app",
              "customer": "cliente1",
              "env": "prod",
              "project": "slack"
            },
            "timeouts": null,
            "vpc_id": "vpc-09e4be7cb2d0c4ff7"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow-jenkins-egress-all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-1042088063",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0c6ec8c567114590c",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.allow-jenkins"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow-jenkins-ingress-http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 8080,
            "id": "sgrule-2307321681",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0c6ec8c567114590c",
            "self": false,
            "source_security_group_id": null,
            "to_port": 8080,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.allow-jenkins"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow-jenkins-ingress-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 22,
            "id": "sgrule-3548455580",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0c6ec8c567114590c",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.allow-jenkins"
          ]
        }
      ]
    }
  ]
}